Working on adding recipes, and tabCompleters.