@@ -1,5 +1,6 @@
 package me.ShermansWorld.AlathraExtras;
 
+import com.palmergames.bukkit.towny.utils.NameUtil;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
@@ -9,20 +10,40 @@ import java.util.Collections;
 import java.util.List;
 
 public class AlathraExtrasTabCompleter implements TabCompleter {
-    public List<String> onTabComplete(CommandSender sender, Command cmd, String label, String[] args) {
-        List<String> completions = new ArrayList<String>();
-        if (args.length == 1) {
-            completions.add("give");
-            completions.add("toggleitemdamage");
-            return completions;
-        } else if (args.length == 2 && args[0].equalsIgnoreCase("give")) {
-            completions.add("tiny_xp_pouch");
-            completions.add("alathran_iron");
-            completions.add("uncharged_silver_melon");
-            completions.add("charged_silver_melon");
-            return completions;
-        }
-        return Collections.emptyList();
+
+    private List<String> commandCompletions = List.of(
+        "give",
+        "toggleitemdamage"
+    );
+
+    private List<String> giveCompletions = List.of(
+        "tiny_xp_pouch",
+        "alathran_iron",
+        "uncharged_silver_melon",
+        "charged_silver_melon",
+        "tungsten",
+        "silver",
+        "platinum"
+    );
+
+	public List<String> onTabComplete(CommandSender sender, Command cmd, String label, String[] args) {
+		if (args.length == 0) {
+			return new ArrayList<String>(commandCompletions);
+        } else if(args.length <= 2){
+            switch (args[0].toLowerCase()){
+                case "give" -> {
+                    return giveCompletions;
+                }
+                case "toggleitemdamage" -> {
+                    return Collections.emptyList();
+                }
+                default -> {
+                    if (args[0].equals("give")) return NameUtil.filterByStart(giveCompletions, args[1]);
+                    return Collections.emptyList();
+                }
+            }
+		}
+         return Collections.emptyList();
     }
 }
 
